# filter-optical-character-recognition

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  RELEASE.md  models.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml
docs/: _category_.json  overview.md
docs/~internal/: what_is_this.md
filter_optical_character_recognition/: filter.py
scripts/: filter_usage.py  producer.py
tests/: test_filter_optical_character_recognition.py
